Refactor user env to profile
